Upgrade to Neo4j Java driver 6.
Co-authored-by: Michael Simons <michael.simons@neo4j.com>
Signed-off-by: Michael Simons <michael.simons@neo4j.com>